commit al master de archivos

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,5 +2,20 @@ body
 {
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
-    color: deeppink;
+    color: darkslategrey;
+    font-family: 16px;
+    margin: 0;
+    padding: 0;
+}
+
+.container{
+    border: solid 1px darkslategrey;
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    margin: 0 auto;
+}
+
+.container h1{
+    font-size: 20px;
 }
