generar conflictos en master

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,7 +2,7 @@ body
 {
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
-    color: darkslategrey;
+    color: rgb(79, 47, 74);
     font-family: 16px;
     margin: 0;
     padding: 0;
